--- a/ag-grid-viewport-params/src/index.scss
+++ b/ag-grid-viewport-params/src/index.scss
@@ -1,3 +1,5 @@
+@import "@ag-grid-community/core/dist/styles/ag-theme-balham-dark/sass/legacy/ag-theme-balham-dark-v22-compat.scss";
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -25,10 +27,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
